--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code",
   "version": "0.1.0",
   "private": false,
-  "homepage": "http://RishiMadhur.github.io/OldtalkiesMovies",
+  "homepage": "http://RishiKanajam.github.io/OldTMovies",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
